syntax = "proto3";

package pb;
option go_package = "/pb";

import "google/protobuf/empty.proto";

service ProductService {
  rpc GetProduct(GetProductInput) returns (Product);
  rpc CreateProduct(CreateProductInput) returns (Product);
  rpc DeleteProduct(DeleteProductInput) returns (google.protobuf.Empty);
  rpc UpdateProduct(Product) returns (Product);
  rpc ListProducts(google.protobuf.Empty) returns (ProductList);
}

message CreateProductInput{
  string name = 1;
  string type = 2;
  float price = 3;
  string description = 4;

  // digital product fields
  int64 fileSize = 5;
  string downloadLink = 6;

  // physical product fields
  float weight = 7;
  string dimensions = 8;

  // subscription product fields
  string subscriptionPeriod = 9;
  float renewalPrice = 10;
}

message GetProductInput {
  int64 id = 1;
}

message DeleteProductInput {
  int64 id = 1;
}

message Product {
  int64 id = 1;
  string name = 2;
  string type = 3;
  float price = 4;
  string createdAt = 5;
  string updatedAt = 6;

  // digital product fields
  int64 fileSize = 7;
  string downloadLink = 8;

  // physical product fields
  float weight = 9;
  string dimensions = 10;

  // subscription product fields
  string subscriptionPeriod = 11;
  float renewalPrice = 12;
}

message ProductList {
  repeated Product data = 1;
}

